# nisshiees-coffee

./: LICENSE  README.md
.github/workflows/: rust.yml
hardware/dripper-tray/: Makefile  constants.scad  drainer.scad  modules.scad  tray.scad
software/: Cargo.toml
software/cqrs-es/: Cargo.toml
software/cqrs-es/src/: aggregate.rs  command.rs  event.rs  id.rs  lib.rs  projector.rs  store.rs  tests.rs  version.rs
software/cqrs-es/src/command/: tests.rs
software/cqrs-es/src/event/: tests.rs
software/cqrs-es/src/store/: serde.rs  tests.rs  version.rs  versioned_aggregate.rs  versioned_event.rs
software/cqrs-es/src/store/versioned_aggregate/: tests.rs
software/cqrs-es/src/store/versioned_event/: tests.rs
software/cqrs-es/src/tests/: onmemory_storage.rs  test_aggregate.rs
software/eventstorage-file/: Cargo.toml
software/eventstorage-file/src/: lib.rs
software/eventstorage-file/src/tests/: test_aggregate.rs
software/eventstorage-file/tests/: integration_test.rs
software/eventstorage-file/tests/common/: mod.rs
software/eventstorage-onmemory/: Cargo.toml
software/eventstorage-onmemory/src/: lib.rs
software/eventstore-onmemory/: Cargo.toml
software/eventstore-onmemory/src/: lib.rs
software/nisshiees-coffee-console/: .gitignore  Cargo.toml  Makefile
software/nisshiees-coffee-console/evcxr/: init.evcxr  prelude.rs
software/nisshiees-coffee-console/src/: commands.rs  context.rs  lib.rs  main.rs
software/nisshiees-coffee-console/src/commands/: canister.rs  mod.rs
software/nisshiees-coffee-console/src/commands/seller/: mod.rs  purchase_log.rs  stock.rs
software/nisshiees-coffee-core/: Cargo.toml
software/nisshiees-coffee-core/src/: canister_list.rs  lib.rs
software/nisshiees-coffee-core/src/seller/: mod.rs  purchase_log.rs  stock.rs
