[package]
name = "eventstorage-file"
version = "0.1.0"
authors = ["Hirokazu Nishioka <hiro@nisshiee.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-es = { path = "../cqrs-es" }
failure = "0.1.6"
failure_derive = "0.1.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
