[package]
name = "nisshiees-coffee-console"
version = "0.1.0"
authors = ["Hirokazu Nishioka <hiro@nisshiee.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nisshiees-coffee-core = { path = "../nisshiees-coffee-core" }
cqrs-es = { path = "../cqrs-es" }
eventstorage-onmemory = { path = "../eventstorage-onmemory" }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.10"
