[package]
name = "nisshiees-coffee-core"
version = "0.1.0"
authors = ["Hirokazu Nishioka <hiro@nisshiee.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-es = { path = "../cqrs-es" }
chrono = "0.4.10"
uuid = "0.8.1"
